2009-04-07  Adam Roben  <aroben@apple.com>

        Small cleanup/correctness fix in ScrollbarThemeWin

        Reviewed by Dave Hyatt.

        * platform/win/ScrollbarThemeWin.cpp: Removed the now-unused
        haveTheme boolean.
        (WebCore::checkAndInitScrollbarTheme): Check IsThemeActive() before
        calling OpenThemeData. This seems to be what MSDN recommends.
        (WebCore::ScrollbarThemeWin::themeChanged): Null-check scrollbarTheme
        before closing it, rather than indirectly null-checking it via
        checking haveTheme.

2009-04-07  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - when -webkit-line-break: after-white-space is specified but the text
          does not auto-wrap, do not shrink the trailing space to fit in the
          available width

        Test: fast/text/whitespace/nowrap-line-break-after-white-space.html

        - when shrinking such trailing space, do not shrink below zero

        Covered by existing tests

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::computeHorizontalPositionsForLine):
        (WebCore::RenderBlock::layoutInlineChildren):

2009-04-07  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        Move RangeBoundaryPoint off of Position, per Darin's suggestion
        https://bugs.webkit.org/show_bug.cgi?id=24966

        Rename setToChild to setToBeforeChild (since that's what the method does)

        * dom/Position.h:
        (WebCore::Position::offsetInContainerNode):
        * dom/Range.cpp:
        (WebCore::Range::insertNode):
        (WebCore::Range::selectNodeContents):
        (WebCore::boundaryNodeWillBeRemoved):
        * dom/Range.h:
        (WebCore::Range::startPosition):
        (WebCore::Range::endPosition):
        * dom/RangeBoundaryPoint.h:
        (WebCore::RangeBoundaryPoint::RangeBoundaryPoint):
        (WebCore::RangeBoundaryPoint::container):
        (WebCore::RangeBoundaryPoint::childBefore):